<?xml version="1.0"?>
<package>
  <name>rhoban_graphs</name>
  <version>0.0.0</version>
  <description>Graph library for rhoban</description>

  <maintainer email="gpassault@labri.fr">Grégoire Passault</maintainer>
  <author email="gpassault@labri.fr">Grégoire Passault</author>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rhoban_geometry</build_depend> <!-- rhobandeps/rhoban_geometry -->
  <run_depend>rhoban_geometry</run_depend>

  <export>
    dijkstra.cpp
  </export>
</package>
