<?xml version="1.0"?>
<package>
  <name>starkit_graphs</name>
  <version>0.0.0</version>
  <description>Graph library for starkit</description>

  <maintainer email="gpassault@labri.fr">Grégoire Passault</maintainer>
  <author email="gpassault@labri.fr">Grégoire Passault</author>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>starkit_geometry</build_depend> <!-- starkit/geometry -->
  <run_depend>starkit_geometry</run_depend>

  <export>
    dijkstra.cpp
  </export>
</package>
